@@ -1,3 +1,13 @@
+2012-08-03  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Incorrect blob url href when inspecting
+        https://bugs.webkit.org/show_bug.cgi?id=93076
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/styles/styles-url-linkify-expected.txt:
+        * inspector/styles/styles-url-linkify.html:
+
 2012-08-03  Sergio Carlos Morales Angeles  <carloschilazo@gmail.com>
 
         Delete text from password does nothing.
